# DEV_LLM

./: .gitignore  README.md  start_dev_env.bat  vector_store.py
backend/: SMART_CONTEXT_DOCS.md  backup_manager.py  backup_routes.py  requirements.txt  vector_store.py
backend/app/: agentic_tools.py  code_change_parser.py  config.py  context_manager.py  crypto.py  database.py  main.py  mode_manager.py  model_router.py  models.py  rag_helper.py  schemas.py  system_prompt.txt  system_prompt_old.txt  system_prompt_original_backup.txt  token_manager.py  websocket_manager.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  config.ts  constants.ts  index.css
frontend/src/components/: ContextMenu.tsx  HighlightedCodeEditor.tsx  LLMSettings.tsx  LogWindow.tsx  (+3 more)
frontend/src/pli-lexer-wasm/: Cargo.toml  README.md  build.sh  pli-lexer.ts  usePLIHighlighter.tsx
frontend/src/pli-lexer-wasm/src/: lib.rs
pli-1.4.0/: lgpl.html  library_linux.html  library_os2.html  makefile  plic  prog_guide.html  readme_linux.html  readme_os2.html
pli-1.4.0/lib/: OpenWatcom_License.html  makefile  prf.def  prf.lbc  prf.lib  seticon.cmd
pli-1.4.0/samples/: LCC_make  LC_make  Makefile.Linux  Makefile.OS2DLL  Makefile.OS2Static  Makefile.isam  SA_make  area.pli  bse.inc  encard.pli  filedump.pli  filefind.pli  hexdump.pli  isub.pli  keysamp.pli  libver.pli  loadsamp.pli  numwrd.pli  pm.def  pmhanoi.pli  print_listing.pli  readu.pli  refsamp.pli  sample.def  samples.html  sorttest.pli  spawn.pli  spawntest.pli  task.pli  updtsamp.pli
(+249 files in other folders)
